public interface Interesado{

    public void recibirNotificacion(List<String> alertas);
}