
public interface GeneradorSugerenciasExterno{

    public Atuendo generarSugerencia(List<Prendas> prendas){
        //EXTERNO
    }
}