package model.Prendas;

public class Color {
  Integer rojo;
  Integer verde;
  Integer azul;

  public Color(Integer rojo, Integer verde, Integer azul){
    this.rojo = rojo;
    this.verde = verde;
    this.azul = azul;
  }
}
