package model.Prendas;

public enum Material {
    MATERIAL1,
    MATERIAL2,
    MATERIAL3
}
