package model;

public class TipoPrenda {
  Categoria categoria;

  public Categoria getCategoria(){
    return this.categoria;
  }
}
