package model.Prendas;

public enum Trama {
  LISA,
  RAYADA,
  CON_LUNARES,
  CUADROS,
  ESTAMPADO
}
