public interface Recomendaciones{
    Prenda prenda;

    public void aplicarseA(Usuarie usuarie);
}