@startuml QMP

'PRENDA Y SUS CARACTERISTICAS
class Prenda{
  double temperaturaMaxima

  boolean esAptaParaTemperatura(Double temperatura)
  categoria getCategoria()
  void fueSugerida()
  void lavar()
  void fueLavada()
  void agregarseA(usuario)
}

class Color{
  int rojo
  int verde
  int azul
}
enum EstadoPrenda{
  NUEVA
  SUCIA
  PERCUDIDA
  LAVANDOSE

  evaluarSiMuta()
  dejarComoNueva()
}

enum Trama{
  LISA,
  RAYADA,
  CON_LUNARES,
  CUADROS,
  ESTAMPADO
}

enum Categoria{
  PARTE_SUPERIOR,
  CALZADO,
  PARTE_INFERIOR,
  ACCESORIOS
}

enum Material{
  MATERIAL1,
  MATERIAL2,
  MATERIAL3,
  ...
}

class TipoPrenda{
  getCategoria()
}

class BorradorPrenda{
  agregarMaterial(material)
  agregarColorPrimario(color)
  agregarColorSecundario(color)
  agregarTrama(trama)
  crearPrenda()
}

'USUARIO Y GUARDARROPAS
interface Guardarropa{
  prendas
}

class Atuendo

class Usuarie{
 
  obtenerSugerencias()
  aceptarRecomendacion(recomendacion)
  agregarAPrenda(prenda)
  eliminarPrenda(prenda)
  
}

'RECOMENDACIONES

interface Recomendaciones{
  prenda
  aplicarseA(usuarie)
}

class PrendaABorrar{
  aplicarseA(usuarie)
}

class PrendaAAgregar{
  aplicarseA(usuarie)
}

'GENERADORES SUGERENCIAS

class GeneradorSugerencias{
  generarSugerencia(prendas)
  
}
class GeneradorSugerenciasExterno{
  generarSugerencia(prendas)
}

class SelectorPrendas


abstract UniformeColegial{
  generarUniforme()
}

'

'SERVICIO CLIMA
class AccuWeatherAdapter{
  servicioClimatico
  getClima(ciudad)
  getAlertas(ciudad)
}
class AccuWeatherAPI{
  getWeather(ciudad)
  getAlerts(ciudad)
}

class Clima{
  temperatura
  humedad
}

interface ServicioClimatico{
  getClima(ciudad)
  getAlerta(ciudad)
}

'CONSULTAS ALERTAS
interface Interesado{
  recibirNotificacion(alertas)
}

class ConsultorAlertas{
  consultarClima(ciudad)
  agregarInteresado(interesado)
  eliminarInteresado(interesado)
}

ConsultorAlertas --> ServicioClimatico
ConsultorAlertas --> "*" Interesado
Interesado <|.. NotificadorMail
Interesado <|.. NotificacionTormenta
Interesado <|.. NotificacionGranizo

Prenda --> TipoPrenda
Prenda --> Material
Prenda --> Trama
Prenda -->"1|2" Color
Prenda --> EstadoPrenda
TipoPrenda --> Categoria
Atuendo -->"*" Prenda
BorradorPrenda ..> Prenda
AccuWeatherAdapter --> AccuWeatherAPI
ServicioClimatico <|-- AccuWeatherAdapter
Guardarropa -->"*" Prenda
Usuarie -->"*" Guardarropa
Usuarie --> SelectorPrendas
SelectorPrendas --> ServicioClimatico
SelectorPrendas --> GeneradorSugerencias
GeneradorSugerencias --> GeneradorSugerenciasExterno
SelectorPrendas ..> Clima
UniformeColegial --> Prenda
Usuarie -->"*" Recomendaciones
Recomendaciones <|.. PrendaAAgregar
Recomendaciones <|.. PrendaABorrar
@enduml